--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </button>
       </div>
       <div class="home-img">
-        <img src="img/eu.jpg" alt="Foto de perfil">
+        <img src="eu.jpg" alt="Foto de perfil">
       </div>
     </section>
 
