--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </section>
 
   <footer>
-    copyright © 2022 William Lucas. Todos os direitos reservados
+    copyright © 2022 Nias Bezerra. Todos os direitos reservados
   </footer>
   </main>  
 
