--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/estilo/style.css">
   <title>Nias Bezerra</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
         </button>
       </div>
       <div class="home-img">
-        <img src="assets/eu.jpg" alt="Foto de perfil">
+        <img src="assets/imagens/eu.jpg" alt="Foto de perfil">
       </div>
     </section>
 
@@ -54,7 +54,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./img/site.png" alt="Foto de um site">
+              <img src="" alt="Foto de um site">
             </div>
             <div class="project-info">
               <h2>WebSites Modernos</h2>
@@ -63,7 +63,7 @@
           </div>
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./img/shop.png" alt="Foto de uma loja online">
+              <img src="" alt="Foto de uma loja online">
             </div>
             <div class="project-info">
               <h2>E-commerce</h2>
@@ -72,7 +72,7 @@
           </div>
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="./img/sistema.png" alt="Foto de um sistema">
+              <img src="" alt="Foto de um sistema">
             </div>
             <div class="project-info">
               <h2>Sistemas completos</h2>
@@ -105,6 +105,6 @@
   </main>  
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
