--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </button>
       </div>
       <div class="home-img">
-        <img src="assets/imagens/eu e cinthia azul.jpg" alt="Foto de perfil">
+        <img src="/assets/imagens/118617697_3248895978534809_7229378373798436598_n.jpg" alt="Foto de perfil">
       </div>
     </section>
 
