--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
   <link rel="stylesheet" href="assets/estilo/style.css">
+  <link rel="shortcut icon" href="assets/imagens/machine-learning.png" type="image/x-icon">
   <title>Nias Bezerra</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        LOGO
+       <img src="assets/imagens/machine-learning 2.png" alt="logo">
       </div>
       <div class="menu">
         <nav class="nav-list">
@@ -33,7 +34,7 @@
         <h2>Olá, sou Nias Bezerra</h2>
         <span class="home-position">Programador FullStack</span>
         <span class="home-resume">
-          Estudante em FullStack, programação web, tenho experiência em desenvolvimento Web
+               Participante do Recode pro 2022, tenho experiência em desenvolvimento Web
           (React, Asp, JS e outros), mobile e criação de conteúdo para o YouTube.
         </span>
 
@@ -54,7 +55,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="project-img">
-              <img src="" alt="Foto de um site">
+              <img src="assets/imagens/website.jpeg" alt="Foto de um site">
             </div>
             <div class="project-info">
               <h2>WebSites Modernos</h2>
