--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <span class="home-position">Programador FullStack</span>
         <span class="home-resume">
                Participante do Recode pro 2022, tenho experiência em desenvolvimento Web
-          (React, Asp, JS e outros), mobile e criação de conteúdo para o YouTube.
+          (html, css, JS e outros), GIT e Github, Bancos de dados, Java, Java Web e criação de conteúdo para o YouTube.
         </span>
 
         <button>
